@@ -1,3 +1,11 @@
+2017-12-16  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* src/misc.c (ADD_TO_LOAD_PATH): Remove a trailing slash
+	from path if any.
+
+	* examples/site-lib/clm.fs (with-sound): Catch all exceptions
+	to reset variables before finish.
+
 2017-12-15  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/effects.fs: effects-cross-synthesis is
